# macdeployqt

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  shared.cpp  shared.h
